Corrélation Variables Catégorielles

--- a/nb_gbodui_rj.ipynb
+++ b/nb_gbodui_rj.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,6 +25,8 @@
     "\n",
     "import missingno as msno\n",
     "from sklearn.impute import KNNImputer,SimpleImputer\n",
+    "\n",
+    "from scipy.stats import chi2_contingency\n",
     "\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.decomposition import PCA\n",
@@ -140932,88 +140934,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['Not in universe'], dtype=object)"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_ind_code_not_in_univ_but_not_children = df.loc[df['major industry code']=='Not in universe or children'].loc[df['education']!='Children']\n",
-    "df_ind_code_not_in_univ_but_not_children['major occupation code'].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['Not in universe', 'New entrant'], dtype=object)"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_ind_code_not_in_univ_but_not_children['reason for unemployment'].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['Not in universe'], dtype=object)"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_ind_code_not_in_univ_but_not_children['major occupation code'].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['Not in universe', 'Other job loser', 'Re-entrant', 'Job leaver',\n",
-       "       'New entrant', 'Job loser - on layoff'], dtype=object)"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['reason for unemployment'].unique()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -142770,6 +142690,104 @@
    ],
    "source": [
     "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nous allons essayer de trouver la corrélation entre variables catégorielles à l'aide du test de khi-deux"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mesurer_correlation_categorielle(df, variable1, variable2):\n",
+    "    contingency_table = pd.crosstab(df[variable1], df[variable2])\n",
+    "\n",
+    "    # Calcul du test du chi-carré et du coefficient de contingence\n",
+    "    chi2, p, _, _ = chi2_contingency(contingency_table)\n",
+    "    cramers_v = (chi2 / (len(df) * (min(contingency_table.shape) - 1)))**0.5\n",
+    "\n",
+    "    # Affichage des résultats\n",
+    "    # print(f\"Variables {variable1} et {variable2}:\")\n",
+    "    # print(f\"Test du chi-carré : {chi2}\")\n",
+    "    # print(f\"P-valeur : {p}\")\n",
+    "    # print(f\"Coefficient de contingence (Cramer's V) : {cramers_v}\")\n",
+    "    return (p, cramers_v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Les variables enroll in edu inst last wk et age_imputed sont correlées\n",
+      "Les variables region of previous residence et live in this house 1 year ago sont correlées\n",
+      "Les variables region of previous residence et state of previous residence_imputed sont correlées\n",
+      "Les variables detailed household and family stat et detailed household summary in household sont correlées\n",
+      "Les variables detailed household and family stat et family members under 18 sont correlées\n",
+      "Les variables detailed household and family stat et veterans benefits code sont correlées\n",
+      "Les variables detailed household summary in household et veterans benefits code sont correlées\n",
+      "Les variables live in this house 1 year ago et state of previous residence_imputed sont correlées\n",
+      "Les variables family members under 18 et veterans benefits code sont correlées\n",
+      "Les variables citizenship et country of birth father sont correlées\n",
+      "Les variables citizenship et country of birth mother sont correlées\n",
+      "Les variables citizenship et country of birth self sont correlées\n",
+      "Les variables fill inc questionnaire for veteran's admin et veterans benefits code sont correlées\n",
+      "Les variables veterans benefits code et age_imputed sont correlées\n",
+      "Les variables veterans benefits code et education_category sont correlées\n",
+      "Les variables age_imputed et age_category sont correlées\n",
+      "Les variables country of birth father et country of birth mother sont correlées\n",
+      "Les variables country of birth father et country of birth self sont correlées\n",
+      "Les variables country of birth mother et country of birth self sont correlées\n"
+     ]
+    }
+   ],
+   "source": [
+    "variables_cat = df.select_dtypes(include=['object', 'category']).columns\n",
+    "\n",
+    "var_traitees = []\n",
+    "for var1 in variables_cat :\n",
+    "    var_traitees.append(var1)\n",
+    "    for var2 in variables_cat :\n",
+    "        if var2 not in var_traitees :\n",
+    "            (p_value, cramers_v) = mesurer_correlation_categorielle(df, var1, var2)\n",
+    "            if (p_value < 0.05) and (cramers_v > 0.6) :\n",
+    "                print (f\"Les variables {var1} et {var2} sont correlées\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Il y a une forte corrélation entre :\n",
+    "- enroll in edu inst last wk et age_imputed\n",
+    "- region of previous residence et live in this house 1 year ago\n",
+    "- region of previous residence et state of previous residence_imputed\n",
+    "- detailed household and family stat et detailed household summary in household\n",
+    "- detailed household and family stat et family members under 18\n",
+    "- detailed household and family stat et veterans benefits code\n",
+    "- detailed household summary in household et veterans benefits code\n",
+    "- live in this house 1 year ago et state of previous residence_imputed\n",
+    "- family members under 18 et veterans benefits code\n",
+    "- citizenship et country of birth father\n",
+    "- citizenship et country of birth mother\n",
+    "- citizenship et country of birth self\n",
+    "- fill inc questionnaire for veteran's admin et veterans benefits code\n",
+    "- veterans benefits code et age_imputed\n",
+    "- veterans benefits code et education_category\n",
+    "- age_imputed et age_category\n",
+    "- country of birth father et country of birth mother\n",
+    "- country of birth father et country of birth self\n",
+    "- country of birth mother et country of birth self"
    ]
   },
   {
